--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,18 +1,28 @@
 {
   "api": {
-    "conductoresapi": {
+    "ebase": {
       "dependsOn": [
         {
           "attributes": [
-            "Name",
-            "Arn"
+            "UserPoolId"
           ],
-          "category": "function",
-          "resourceName": "conductoresfunction"
+          "category": "auth",
+          "resourceName": "ebase35f92a6b"
         }
       ],
+      "output": {
+        "authConfig": {
+          "additionalAuthenticationProviders": [],
+          "defaultAuthentication": {
+            "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+            "userPoolConfig": {
+              "userPoolId": "authebase35f92a6b"
+            }
+          }
+        }
+      },
       "providerPlugin": "awscloudformation",
-      "service": "API Gateway"
+      "service": "AppSync"
     }
   },
   "auth": {
@@ -43,49 +53,6 @@
       "service": "Cognito"
     }
   },
-  "function": {
-    "conductoresfunction": {
-      "build": true,
-      "dependsOn": [
-        {
-          "attributeEnvMap": {
-            "Arn": "TABLE_ARN",
-            "Name": "TABLE_NAME"
-          },
-          "attributes": [
-            "Name",
-            "Arn"
-          ],
-          "category": "storage",
-          "resourceName": "conductoresdb"
-        }
-      ],
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
-    }
-  },
-  "parameters": {
-    "AMPLIFY_function_conductoresfunction_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "conductoresfunction"
-        }
-      ]
-    },
-    "AMPLIFY_function_conductoresfunction_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "conductoresfunction"
-        }
-      ]
-    }
-  },
-  "storage": {
-    "conductoresdb": {
-      "providerPlugin": "awscloudformation",
-      "service": "DynamoDB"
-    }
-  }
+  "function": {},
+  "storage": {}
 }
