--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "perfect-scrollbar": "1.5.5",
+    "bootstrap": "4.6.0",
+    "web-vitals": "^2.1.4",
+    "reactstrap": "8.7.1",
+    "sass": "1.53.0"
   },
   "scripts": {
     "start": "react-scripts start",
