--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "aws-amplify": "^5.0.18",
     "bootstrap": "^4.6.0",
     "graphql-scalars": "^1.20.1",
+    "mdb-react-ui-kit": "^6.0.0",
+    "mdb-ui-kit": "^6.2.0",
     "perfect-scrollbar": "1.5.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
