faltan las coordenas

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -12,7 +12,16 @@
       ],
       "output": {
         "authConfig": {
-          "additionalAuthenticationProviders": [],
+          "additionalAuthenticationProviders": [
+            {
+              "apiKeyConfig": {
+                "apiKeyExpirationDate": "2024-03-28T14:53:06.216Z",
+                "apiKeyExpirationDays": 365,
+                "description": "python"
+              },
+              "authenticationType": "API_KEY"
+            }
+          ],
           "defaultAuthentication": {
             "authenticationType": "AMAZON_COGNITO_USER_POOLS",
             "userPoolConfig": {
@@ -90,7 +99,9 @@
           "category": "function",
           "resourceName": "S3Trigger6956e03e"
         }
-      ]
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "S3"
     }
   }
 }
