--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^4.3.9",
+    "@react-google-maps/api": "^2.18.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^5.0.18",
     "bootstrap": "^4.6.0",
+    "google-map-react": "^2.2.0",
     "graphql-scalars": "^1.20.1",
+    "leaflet": "^1.9.3",
     "mdb-react-ui-kit": "^6.0.0",
     "mdb-ui-kit": "^6.2.0",
     "perfect-scrollbar": "1.5.5",
@@ -17,8 +20,12 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.8.2",
+    "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.0.21",
+    "react-player": "^2.12.0",
+    "react-router-dom": "^6.11.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.2",
     "reactstrap": "8.7.1",
     "sass": "1.53.0",
     "web-vitals": "^2.1.4"
