--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-toastify": "^9.1.2",
     "reactstrap": "8.7.1",
     "sass": "1.53.0",
+    "tw-elements": "^1.0.0-beta2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
