--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -69,6 +69,24 @@
       "service": "Lambda"
     }
   },
+  "parameters": {
+    "AMPLIFY_function_S3Trigger6956e03e_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "S3Trigger6956e03e"
+        }
+      ]
+    },
+    "AMPLIFY_function_S3Trigger6956e03e_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "S3Trigger6956e03e"
+        }
+      ]
+    }
+  },
   "storage": {
     "videos": {
       "dependsOn": [
