--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^4.3.9",
+    "@craco/craco": "^7.1.0",
     "@react-google-maps/api": "^2.18.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "amazon-location-helpers": "^1.1.1",
     "aws-amplify": "^5.0.18",
+    "aws-sdk": "^2.1377.0",
     "bootstrap": "^4.6.2",
     "google-map-react": "^2.2.0",
     "graphql-scalars": "^1.20.1",
     "leaflet": "^1.9.3",
+    "maplibre-gl": "^2.4.0",
     "mdb-react-ui-kit": "^6.0.0",
     "mdb-ui-kit": "^6.3.0",
     "perfect-scrollbar": "1.5.5",
