--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-amplify/ui-react": "^4.3.9",
+    "@aws-amplify/analytics": "^6.1.0",
+    "@aws-amplify/api": "^5.1.0",
+    "@aws-amplify/auth": "^5.3.6",
+    "@aws-amplify/core": "^5.3.0",
+    "@aws-amplify/interactions": "^5.0.32",
+    "@aws-amplify/storage": "^5.2.6",
+    "@aws-amplify/ui-react": "^4.6.2",
+    "@aws-amplify/xr": "^4.0.15",
     "@craco/craco": "^7.1.0",
     "@react-google-maps/api": "^2.18.1",
     "@testing-library/jest-dom": "^5.16.5",
