--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "mdb-ui-kit": "^6.3.0",
     "perfect-scrollbar": "1.5.5",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.2",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.0.21",
