sigue sin mostrar mapgl, se intentará con leaflet

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "google-map-react": "^2.2.0",
     "graphql-scalars": "^1.20.1",
     "leaflet": "^1.9.3",
+    "mapbox-gl": "^2.14.1",
     "maplibre-gl": "^2.4.0",
+    "maplibre-gl-js-amplify": "^3.0.5",
     "mdb-react-ui-kit": "^6.0.0",
     "mdb-ui-kit": "^6.3.0",
     "perfect-scrollbar": "1.5.5",
