--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -69,6 +69,24 @@
       "service": "Lambda"
     }
   },
+  "geo": {
+    "Map": {
+      "accessType": "AuthorizedAndGuestUsers",
+      "dependsOn": [
+        {
+          "attributes": [
+            "UserPoolId"
+          ],
+          "category": "auth",
+          "resourceName": "ebase35f92a6b"
+        }
+      ],
+      "isDefault": true,
+      "mapStyle": "VectorEsriStreets",
+      "providerPlugin": "awscloudformation",
+      "service": "Map"
+    }
+  },
   "parameters": {
     "AMPLIFY_function_S3Trigger6956e03e_deploymentBucketName": {
       "usedBy": [
