--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "aws-amplify": "^5.0.18",
     "aws-sdk": "^2.1377.0",
     "bootstrap": "^4.6.2",
+    "chart.js": "^4.3.0",
+    "chartjs-plugin-annotation": "^3.0.1",
+    "faker": "^6.6.6",
+    "flowbite": "^1.6.5",
     "google-map-react": "^2.2.0",
     "graphql-scalars": "^1.20.1",
     "leaflet": "^1.9.3",
@@ -28,9 +32,11 @@
     "maplibre-gl-js-amplify": "^3.0.5",
     "mdb-react-ui-kit": "^6.0.0",
     "mdb-ui-kit": "^6.3.0",
+    "moment": "^2.29.4",
     "perfect-scrollbar": "1.5.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
