--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "aws-amplify": "^5.0.18",
     "aws-sdk": "^2.1377.0",
     "bootstrap": "^4.6.2",
-    "chart.js": "^4.3.0",
+    "chart.js": "^4.4.0",
     "chartjs-plugin-annotation": "^3.0.1",
     "faker": "^6.6.6",
     "flowbite": "^1.6.5",
@@ -37,6 +37,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-chartjs-2": "^5.2.0",
+    "react-chartjs2": "^1.2.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
